[package]
name = "tuic"
version = "5.0.0"
authors = ["EAimTY <ea.imty@gmail.com>"]
description = "Delicately-TUICed high-performance proxy built on top of the QUIC protocol"
categories = ["network-programming", "command-line-utilities"]
keywords = ["tuic", "proxy", "quic"]
edition = "2021"
rust-version = "1.59"
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/EAimTY/tuic"

[workspace]
members = [
    "client",
    "server",
]

[dependencies]
# blake3 = "1.3.*"
byteorder = { version = "1.4.*", default-features = false, optional = true }
bytes = { version = "1.2.*", default-features = false, optional = true }
crossbeam-utils = { version = "0.8.*", default-features = false, optional = true }
# env_logger = { version = "0.9.*", features = ["humantime"], default-features = false }
futures = { version = "0.3.*", default-features = false, optional = true }
# getopts = "0.2.*"
# log = { version = "0.4.*", features = ["serde", "std"] }
# once_cell = { version = "1.13.*", features = ["parking_lot"] }
parking_lot = { version = "0.12.*", default-features = false, optional = true }
quinn = { version = "0.8.*", features = ["tls-rustls"], default-features = false, optional = true }
# rand = "0.8.*"
rustls = { version = "0.20.*", default-features = false, optional = true }
# rustls-native-certs = "0.6.*"
# rustls-pemfile = "1.0.*"
# serde = { version = "1.0.*", features = ["derive", "std"], default-features = false }
# serde_json = { version = "1.0.*", features = ["std"], default-features = false }
# socket2 = "0.4.*"
# socks5-proto = "0.3.*"
# socks5-server = "0.8.*"
thiserror =  { version = "1.0.*", default-features = false, optional = true }
tokio = { version = "1.20.*", default-features = false, optional = true }
# tokio = { version = "1.20.*", features = ["io-util", "macros", "net", "parking_lot", "rt-multi-thread", "sync", "time"] }
# webpki = { version = "0.22.*", default-features = false }

[features]
default = []

all = ["protocol_marshaling", "server", "client"]

protocol_marshaling = ["byteorder/std", "bytes", "thiserror", "tokio/io-util"]

server = ["crossbeam-utils", "futures", "protocol_marshaling", "quinn", "rustls", "thiserror", "tokio/io-util", "tokio/macros"]
client = ["futures", "parking_lot", "protocol_marshaling", "quinn", "rustls", "thiserror", "tokio/io-util", "tokio/macros"]

[dev-dependencies]
tuic = { path = ".", features = ["all"] }

[profile.release]
lto = true
strip = true
incremental = false
codegen-units = 1
panic = "abort"

[package.metadata.docs.rs]
all-features = true