[package]
name = "tuic-client"
version = "0.1.0"
authors = ["EAimTY <ea.imty@gmail.com>"]
description = ""
categories = ["network-programming", "command-line-utilities"]
keywords = ["tuic", "proxy", "quic"]
edition = "2021"
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/EAimTY/tuic"

[dependencies]
tuic-protocol = { path="../protocol" }

anyhow = "1.0"
blake3 = "1.3"
bytes = "1.1"
env_logger = { version = "0.9", features = ["humantime"], default-features = false }
futures-util = { version = "0.3", default-features = false }
getopts = "0.2"
log = "0.4"
once_cell = "1.10"
parking_lot = "0.12"
quinn = "0.8"
rand = "0.8"
rustls = { version = "0.20", features = ["quic"], default-features = false }
rustls-pemfile = "0.3"
thiserror = "1.0"
tokio = { version = "1.17", features = ["io-util", "macros", "net", "rt-multi-thread", "sync"] }
webpki = { version = "0.22", default-features = false }
