[package]
name = "tuic-client"
version = "0.5.0"
authors = ["EAimTY <ea.imty@gmail.com>"]
description = "Delicately-TUICed high-performance proxy built on top of the QUIC protocol"
categories = ["network-programming", "command-line-utilities"]
keywords = ["tuic", "proxy", "quic"]
edition = "2021"
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/EAimTY/tuic"

[dependencies]
tuic-protocol = { path="../protocol" }

blake3 = "1.3"
bytes = "1.1"
env_logger = { version = "0.9", features = ["humantime"], default-features = false }
futures-util = { version = "0.3", default-features = false }
getopts = "0.2"
log = { version = "0.4", features = ["serde", "std"] }
once_cell = "1.10"
parking_lot = "0.12"
quinn = "0.8"
rand = "0.8"
rustls = { version = "0.20", features = ["quic"], default-features = false }
rustls-pemfile = "0.3"
serde = { version = "1.0", features = ["derive", "std"], default-features = false }
serde_json = { version = "1.0", features = ["std"], default-features = false }
socket2 = "0.4"
thiserror = "1.0"
tokio = { version = "1.17", features = ["io-util", "macros", "net", "rt-multi-thread", "sync", "time"] }
webpki = { version = "0.22", default-features = false }
