[package]
name = "tuic-protocol"
version = "4.1.2"
authors = ["EAimTY <ea.imty@gmail.com>"]
description = ""
categories = ["network-programming"]
keywords = ["tuic", "proxy", "quic"]
edition = "2021"
rust-version = "1.59"
readme = "../README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/EAimTY/tuic"

[dependencies]
byteorder = "1.4.*"
bytes = "1.2.*"
tokio = { version = "1.20.*", features = ["io-util"] }
