[package]
name = "tuic-server"
version = "0.2.0"
authors = ["EAimTY <ea.imty@gmail.com>"]
description = "Delicately-TUICed high-performance proxy built on top of the QUIC protocol"
categories = ["network-programming", "command-line-utilities"]
keywords = ["tuic", "proxy", "quic"]
edition = "2021"
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/EAimTY/tuic"

[dependencies]
tuic-protocol = { path="../protocol" }

blake3 = "1.3"
bytes = "1.1"
crossbeam-utils = { version = "0.8", default-features = false }
env_logger = { version = "0.9", features = ["humantime"], default-features = false }
futures-util = { version = "0.3", default-features = false }
getopts = "0.2"
log = "0.4"
parking_lot = { version = "0.12", features = ["send_guard"] }
quinn = "0.8"
rustls = { version = "0.20", features = ["quic"], default-features = false }
rustls-pemfile = "0.3"
thiserror = "1.0"
tokio = { version = "1.17", features = ["io-util", "macros", "rt-multi-thread", "sync", "time"] }
