[package]
name = "tuic-client"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { version = "1.3.0", default-features = false, features = ["std"] }
lexopt = { version = "0.3.0", default-features = false }
once_cell = { version = "1.17.0", default-features = false, features = ["parking_lot", "std"] }
parking_lot = { version = "0.12.1", default-features = false, features = ["send_guard"] }
quinn = { version = "0.9.3", default-features = false, features = ["futures-io", "runtime-tokio", "tls-rustls"] }
serde = { version = "1.0.152", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.91", default-features = false, features = ["std"] }
socks5-proto = { version = "0.3.3", default-features = false }
socks5-server = { version = "0.8.3", default-features = false }
thiserror = { version = "1.0.38", default-features = false }
tokio = { version = "1.24.2", default-features = false, features = ["macros", "net", "parking_lot", "rt-multi-thread", "time"] }
tokio-util = { version = "0.7.4", default-features = false, features = ["compat"] }
tuic = { path = "../tuic", default-features = false }
tuic-quinn = { path = "../tuic-quinn", default-features = false }
