[package]
name = "tuic-client"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { version = "1.4.0", default-features = false, features = ["std"] }
crossbeam-utils = { version = "0.8.14", default-features = false, features = ["std"] }
env_logger = { version = "0.10.0", default-features = false, features = ["humantime"] }
lexopt = { version = "0.3.0", default-features = false }
log = { version = "0.4.17", default-features = false, features = ["serde", "std"] }
once_cell = { version = "1.17.0", default-features = false, features = ["parking_lot", "std"] }
parking_lot = { version = "0.12.1", default-features = false, features = ["send_guard"] }
quinn = { version = "0.9.3", default-features = false, features = ["futures-io", "runtime-tokio", "tls-rustls"] }
register-count = { version = "0.1.0", default-features = false, features = ["std"] }
rustls = { version = "0.20.8", default-features = false, features = ["quic"] }
rustls-native-certs = { version = "0.6.2", default-features = false }
rustls-pemfile = { version = "1.0.2", default-features = false }
serde = { version = "1.0.152", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.91", default-features = false, features = ["std"] }
socket2 = { version = "0.4.7", default-features = false }
socks5-proto = { version = "0.3.3", default-features = false }
socks5-server = { version = "0.8.3", default-features = false }
thiserror = { version = "1.0.38", default-features = false }
tokio = { version = "1.25.0", default-features = false, features = ["io-util", "macros", "net", "parking_lot", "rt-multi-thread", "time"] }
tokio-util = { version = "0.7.4", default-features = false, features = ["compat"] }
tuic = { version = "5.0.0-pre-alpha5", default-features = false }
tuic-quinn = { version = "0.1.0-pre-alpha1", default-features = false }
uuid = { version = "1.3.0", default-features = false, features = ["serde", "std"] }
webpki = { version = "0.22.0", default-features = false }
