[package]
name = "tuic-quinn"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { version = "1.4.0", default-features = false, features = ["std"] }
futures-util = { version = "0.3.26", default-features = false, features = ["io", "std"] }
quinn = { version = "0.9.3", default-features = false, features = ["futures-io"] }
thiserror = { version = "1.0.38", default-features = false }
tuic = { path = "../tuic", default-features = false, features = ["async_marshal", "marshal", "model"] }
