[package]
name = "tuic-quinn"
version = "0.1.0-pre-alpha2"
authors = ["EAimTY <ea.imty@gmail.com>"]
description = "A thin layer on top of quinn to provide functions for TUIC"
categories = ["network-programming"]
keywords = ["network", "proxy", "quic", "tuic"]
edition = "2021"
rust-version = "1.65.0"
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/EAimTY/tuic"

[dependencies]
bytes = { version = "1.4.0", default-features = false, features = ["std"] }
futures-util = { version = "0.3.26", default-features = false, features = ["io", "std"] }
quinn = { version = "0.9.3", default-features = false, features = ["futures-io"] }
thiserror = { version = "1.0.38", default-features = false }
tuic = { version = "5.0.0-pre-alpha6", default-features = false, features = ["async_marshal", "marshal", "model"] }
uuid = { version = "1.3.0", default-features = false, features = ["std"] }
