[package]
name = "tuic-quinn"
version = "0.1.0"
authors = ["EAimTY <ea.imty@gmail.com>"]
description = "A thin layer on top of quinn to provide functions for TUIC"
categories = ["network-programming"]
keywords = ["network", "proxy", "quic", "tuic"]
edition = "2021"
rust-version = "1.65.0"
readme = "README.md"
license = "GPL-3.0-or-later"
repository = "https://github.com/EAimTY/tuic"

[dependencies]
bytes = { version = "1.4.0", default-features = false, features = ["std"] }
futures-util = { version = "0.3.28", default-features = false, features = ["io", "std"] }
quinn = { version = "0.10.1", default-features = false, features = ["futures-io"] }
thiserror = { version = "1.0.40", default-features = false }
tuic = { path = "../tuic", default-features = false, features = ["async_marshal", "marshal", "model"] }
uuid = { version = "1.3.3", default-features = false, features = ["std"] }
