[package]
name = "tuic-server"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = { version = "1.4.0", default-features = false, features = ["std"] }
crossbeam-utils = { version = "0.8.14", default-features = false, features = ["std"] }
env_logger = { version = "0.10.0", default-features = false, features = ["humantime"] }
lexopt = { version = "0.3.0", default-features = false }
log = { version = "0.4.17", default-features = false, features = ["serde", "std"] }
parking_lot = { version = "0.12.1", default-features = false }
quinn = { version = "0.9.3", default-features = false, features = ["futures-io", "runtime-tokio", "tls-rustls"] }
register-count = { version = "0.1.0", default-features = false, features = ["std"] }
rustls = { version = "0.20.8", default-features = false, features = ["quic"] }
rustls-pemfile = { version = "1.0.2", default-features = false }
serde = { version = "1.0.152", default-features = false, features = ["derive", "std"] }
serde_json = { version = "1.0.92", default-features = false, features = ["std"] }
socket2 = { version = "0.4.7", default-features = false }
thiserror = { version = "1.0.38", default-features = false }
tokio = { version = "1.25.0", default-features = false, features = ["io-util", "macros", "net", "parking_lot", "rt-multi-thread", "time"] }
tokio-util = { version = "0.7.4", default-features = false, features = ["compat"] }
tuic = { path = "../tuic", default-features = false }
tuic-quinn = { path = "../tuic-quinn", default-features = false }
uuid = { version = "1.3.0", default-features = false, features = ["serde", "std"] }
