[package]
name = "tuic"
version = "0.1.0"
edition = "2021"

[features]
async_marshal = ["bytes", "futures-util"]
marshal = ["bytes"]
model = ["parking_lot", "thiserror"]

[dependencies]
bytes = { version = "1.3.0", default-features = false, features = ["std"], optional = true }
futures-util = { version = "0.3.25", default-features = false, features = ["io", "std"], optional = true }
parking_lot = { version = "0.12.1", default-features = false, optional = true }
thiserror = { version = "1.0.38", default-features = false, optional = true }

[dev-dependencies]
tuic = { path = ".", features = ["async_marshal", "marshal", "model"] }
